cambios de Gerald y TC

--- a/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/EntregasFacturar/Facturar.cshtml
@@ -89,7 +89,7 @@
         var CondicionesPagos = [];
         var ModificarProductos = '@(!string.IsNullOrEmpty(Roles.Where(a => a == "78").FirstOrDefault()))';
         var TotalAntiguo = 0;
-
+        var ErrorValidacion = "";
         function RecuperarTipoCambio() {
 
             try {
@@ -110,7 +110,9 @@
                         TipoCambio.push(det);
                     })
                     .catch(error => {
-                        // Maneja errores
+                        // Maneja errores 
+
+
                         console.error('Fetch error:', error);
                     });
             } catch (e) {
@@ -123,7 +125,42 @@
             }
 
         }
+        function RecuperarTipoCambio2(){
+            try
+            {
+                const today = new Date();
+                const formattedDate = today.toLocaleDateString('es-CR'); // Formato de Costa Rica
+                console.log(formattedDate);
+                var url = "https://tipodecambio.paginasweb.cr/api//" + formattedDate;
+                fetch(url)
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok');
+                        }
+                        return response.json(); // Parsea la respuesta como JSON
+                    })
+                    .then(data => {
+                        // Maneja los datos obtenidos
+                        console.log(data);
+                        var det = {
+                            Moneda: "USD",
+                            TipoCambio: parseFloat(data.venta)
+                        }
+                        TipoCambio.push(det);
+                    })
+                    .catch(error => {
+                        // Maneja errores 
+                        console.error('Fetch error:', error);
+                    });
+            }catch(e){
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Ha ocurrido un error  ' + e
 
+                })
+            }
+        }
         function Recuperar() {
             try {
                 var detalles = JSON.parse($("#Detalle").val());
@@ -606,6 +643,7 @@
         }
         function Validar(recibido) {
             try {
+                ErrorValidacion = "";
                 var bandera = true;
 
                 if (recibido.Correo == "") {
@@ -618,12 +656,13 @@
                             text: 'Correo invalido '
 
                         });
-
+                        ErrorValidacion = "Correo invalido";
                         bandera = false;
                     }
                 }
                 if (recibido.Cedula == "") {
                     bandera = false;
+                    ErrorValidacion = "Cedula vacia";
                 }
 
                 var CondicionActual = recibido.idCondicionVenta;
@@ -631,6 +670,16 @@
                 if (Cond != undefined) {
                     if (recibido.Metodos.length == 0 && Cond.Dias == 0) {
                         bandera = false;
+                        ErrorValidacion = "Falta rellenar los metodos de pago";
+
+                    }
+                    if(Cond.Dias > 0)
+                    {
+                        if(recibido.OC == "" || recibido.OC == undefined)
+                        {
+                            bandera = false;
+                            ErrorValidacion = "Falta rellenar la Orden de Compra";
+                        }
                     }
                 }
                 var TP = TipoCambio.find(a => a.Moneda == "USD");
@@ -806,6 +855,7 @@
                     TotalCompra: $("#TotalGeneral").val(),
                     PorDesc: $("#descGeneral").val(),
                     Redondeo: $("#RedondeoGeneral").text(),
+                    OC: $("#OrdenCompra").val(),
                     Detalle: DetFactura,
                     Metodos: MetodosPagosAbonos
 
@@ -918,7 +968,7 @@
                     Swal.fire({
                         icon: 'error',
                         title: 'Oops...',
-                        text: 'Parece que faltan datos por rellenar'
+                        text: 'Error: ' + ErrorValidacion
 
                     })
                 }
@@ -2051,7 +2101,7 @@
                             {
                                 case "01":
                                     {
-                                        <h3 class="text-dark mb-1">Factura</h3>
+                                            <h3 class="text-dark mb-1">Factura</h3>
                                         break;
                                     }
 
@@ -2119,6 +2169,13 @@
                                         }
 
                                     </select>
+
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Orden de Compra:</label>
+                                    <input id="OrdenCompra" asp-for="Factura.OC" class="form-control" type="text" maxlength="50" />
 
                                 </div>
                             </div>
