--- a/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Shared/_NavbarPartial.cshtml
@@ -363,6 +363,17 @@
                                     }
 
                                 </li>
+                                <li class="nav-item">
+                                    @{
+                                        if (!string.IsNullOrEmpty(Roles.Where(a => a == "86").FirstOrDefault()))
+                                        {
+
+                                            <a class="nav-link" asp-page="/PlanificadorDiario/Index">Planificador Diario</a>
+                                        }
+
+                                    }
+
+                                </li>
 
                             </ul>
                         </div>
