--- a/Sicsoft.Checkin.Web/Pages/Client/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Client/Nuevo.cshtml
@@ -66,7 +66,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label>Cédula (Factura Electrónica):</label>
 
@@ -74,7 +74,7 @@
 
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label>Nombre:</label>
 
@@ -83,10 +83,23 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label>Teléfono:</label>
                                 <input type="tel" class="form-control form-control-lg" id="tel" placeholder="Telefono" asp-for="Input.Telefono" maxlength="10">
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label>Moneda:</label>
+                                <select id="moneda" class="form-control" required asp-for="Input.Moneda" >
+                                    <option value="USD">Dólares</option>
+                                    <option value="COL">Colones</option>
+                                    <option value="##">Monedas Todas</option>
+
+                                </select>
 
                             </div>
                         </div>
