--- a/Sicsoft.Checkin.Web/Pages/OrdenVenta/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OrdenVenta/Nuevo.cshtml
@@ -1097,8 +1097,8 @@
                             <label>Moneda:</label>
                             <select id="moneda" class="form-control" required onchange="javascript: onChangeMoneda()">
 
-                                <option value="COL" selected>Colones</option>
-                                <option value="USD">Dólares</option>
+                                <option value="USD" selected>Dólares</option>
+                                <option value="COL" >Colones</option>
 
 
                             </select>
