--- a/Sicsoft.Checkin.Web/Pages/PlanificadorDiario/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/PlanificadorDiario/Index.cshtml
@@ -82,7 +82,51 @@
 @using Sicsoft.Checkin.Web.Models;
 @inject IHttpContextAccessor httpContextAccessor
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Filtro</h4>
+
+            </div>
+            <div class="card-body">
+                <form method="get">
+                    <div class="row">
+                        
+                        <div class="col-sm-4 pr-1">
+                            <div class="form-group">
+                                <label>Tipo de Caso</label>
+                               
+                                <select class="js-example-basic-multiple form-control" id="estadoLlamada" asp-for="filtro.seleccionMultiple" multiple="multiple">
+                                    @foreach (var item in Model.TP)
+                                    {
+                                        <option value="@item.idSAP">@item.idSAP - @item.Nombre</option>
+                                    }
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12">
+                            <br />
+                        </div>
  
+
+                        <div class="col-sm-6 pr-1">
+                        </div>
+                        <div class="col-sm-6 pl-1" style="text-align: right;">
+                            <button title="Buscar" type="submit" class="btn btn-rounded btn-outline-primary"> <i class="fas fa-search"></i></button>
+
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
 <div class="row">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="card">
@@ -146,7 +190,7 @@
                                     <td>@item.Clase_CLiente</td>
                                     <td>@item.Tipo_Caso</td>
                                     <td>@item.Status_Actual</td>
-                                    <td>@item.Dias_Status_Actual</td>
+                                    <td>@item.DiasHabiles</td>
                                     <td>@item.Fecha_Creacion.ToString("dd/MM/yyyy")</td>
                                     <td>@item.Fecha_de_actualizacion.ToString("dd/MM/yyyy")</td>
                                     <td>@item.Ultimo_Status</td>
